--- a/Work experience.html
+++ b/Work experience.html
@@ -46,8 +46,8 @@
 						</i>
 					</p>
 					<ul>
-						<li> collaborated with project managers to analyze project data and set challenging coding goals by offering fast solutions for
-							tough technical issues</li>
+						<li>  Achieved a 90% improvement in development efficiency by collaborating with senior engineers and managers to develop
+							microservices using AWS services.</li>
 						<li> Participated in the entire project life cycle, encompassing activities such as developing both frontend & backend of Wells
 							Fargo Banking web applications using SpringBoot,Angular,Java,Node.js,JavaScript,SQL,under EAM domain which
 							resulted in 100% enhancement of customer experience through improved user interfacet.</li>
@@ -76,17 +76,14 @@
 					<h3><u>PROJECTS</u></h3>
 					<p>
 					<h3>Spotify Webapp clone | Java, SpringBoot, React.Js, JavaScript</h3>
-					<li> Spearheading the development of an innovative Spotify clone app, leveraging advanced
-						technologies like React.js for the dynamic front-end and Spring Boot (Java) for robust back-end
-						functionalities.
-					</li>
-					<li>Crafting a seamless user experience by implementing key features such as secure user
-						authentication, dynamic playlist management, and real-time audio streaming, closely mirroring
-						the comprehensive capabilities of the original Spotify platform.</li>
-					<li> Collaborating seamlessly within a cross-functional team to ensure the successful integration of
-						diverse components. Showcasing adaptability and expertise in both JavaScript (React.js) for
-						creating engaging user interfaces and Java (Spring Boot) for robust server-side logic,
-						facilitating effective communication between the client and server</li>
+
+						<li>Implemented a full-fledged music streaming application using Java Spring Boot for the backend and React for the
+							frontend, showcasing proficiency in modern web development technologies and architectures.</li>
+						<li>Integrated Spring Security for user authentication and authorization, demonstrating expertise in securing web
+							applications and managing user roles and permissions, a skill set comparable to working with AWS Cognito.</li>
+						<li>Collaborated within a cross-functional team to integrate front-end and back-end components, showcasing versatility in
+							JavaScript (React.js) and Java (Spring Boot).</li>
+					
 					</p>
 
 					<p>
@@ -117,13 +114,13 @@
 				<section class="skills">
 					<h3><u>SKILLS & LEADERSHIP</u></h3>
 					<ul>
-						<li><b>Programming</b>:Java SE,Python(Intermediate),JavaScript,
+						<li><b>Programming</b>:Java SE,Python,JavaScript,
 							Typescript,SQL/MYSQL </li>
 						<li><b>Web Expertise</b>: Angular, ReactJs,HTML, CSS, Git</li>
 							<li><b>Devloper Tools:</b>VS Code, Eclipse, IntelliJ, Docker, Node.Js</li>
 							<li><b>Software development lifecycle Tools</b>: Jira, Jenkins, Git, JFrog Artifactory</li>
-						<li><b>Tools</b>: IntelliJ, Eclipse IDE, Visual Studio Code</li>
-						<li><b>Cloud Technologies</b>: AWS(S3, EC2, Lambda, Kubernaties),GCP</li>
+			
+						<li><b>Cloud Technologies</b>: AWS</li>
 					<li><b>Build Tools:</b> Maven, Gradle
 					</li>
 						</li>
@@ -151,7 +148,9 @@
 						<li>Completed Global Agile Developer certification from Infosys<b>Infosys Agile Globel
 								developer</b>
 						</li>
+						<li>Aws Developer Associate (Preparing)</li>
 						<li>Infosys Ethical Hacker certification</li>
+						
 					</ul>
 				</section>
 			</div>
