Added New logos and information

--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
 					<div class="horizontal-list_icons"><img src="assets\css\images\icons8-angularjs-48.png" alt="Angular Logo" class="tech-logo"></div>
 					<div class="horizontal-list_icons"><img src="assets\css\images\icons8-react-native-24.png" alt="ReactJs Logo" class="tech-logo"></div>
 					<div class="horizontal-list_icons"><img src="assets\css\images\icons8-java-logo-48.png" alt="Java Logo" class="tech-logo"></div>
+					<div class="horizontal-list_icons"><img src="assets\css\images\icons8-python-48.png" alt="Spring Boot Logo" class="tech-logo"></div>
+					<div class="horizontal-list_icons"><img src="assets\css\images\icons8-redis-48.png" alt="Spring Boot Logo" class="tech-logo"></div>
+
 					<div class="horizontal-list_icons"><img src="assets\css\images\icons8-spring-boot-logo-48.png" alt="Spring Boot Logo" class="tech-logo"></div>
 					
 				</ul>
