--- a/index.html
+++ b/index.html
@@ -43,13 +43,10 @@
 				<div class="content">
 					<div class="inner">
 						<h1 id="sentenceContainer"></h1>
-						<p>Hola! I'm Arun Erram.I’m a Software Engineer,Software developer &amp; front-end web
-							developer.Currently I'm pursuing masters in computer science at University of missouri
-							kansas-city. I'm familiar in Java, Springboot Framework &amp; Angular Framwork, Reactjs. I’m also
-							passionate about music and
-							make portraits and universes around what I listen to and I’m always curious to learn more
-							when it comes to new
-							technologies and creative coding.</p>
+						<p>Hola! I'm Arun Erram, a highly skilled and experienced software engineer with a passion for developing innovative and efficient solutions. 
+							With a strong background in Java,Python, Spring Boot, Angular, and TypeScript, I have consistently delivered high-quality microservices-based applications. 
+							My expertise in cloud technologies, particularly Amazon Web Services, and my ability to implement robust security mechanisms makes me a valuable asset. 
+							My commitment to continuous learning, leadership roles, and open-source contributions demonstrates my dedication to professional growth and community involvement.</p>
 						<ul class="actions">
 							<!-- <li><a href="generic.html" class="button">Learn more</a></li> -->
 						</ul>
