--- a/Work experience.html
+++ b/Work experience.html
@@ -153,13 +153,13 @@
 				<section class="certifications">
 					<h3><u>Certifications & Achievements</u></h3>
 					<ul>
-						<li>Successfully completed Infosys Java developer program certification<b>Infosys Certified Java
-								Developer</b> </li>
-						<li>Successfully completed AI 900 CERTIFICATION</li>
+						<li><b>Aws Developer Associate Certified</b></li>
+						<li><b>Infosys Certified Java Developer</b> </li>
+						<li> Azure AI 900 Certified</li>
 						<li>Completed Global Agile Developer certification from Infosys<b>Infosys Agile Globel
 								developer</b>
 						</li>
-						<li><b>Aws Developer Associate (Ongoing)</b></li>
+						
 						<li>Infosys Ethical Hacker certification</li>
 						
 					</ul>
