Update index.html with new image

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<!-- <a href="#" class="image" style="background-image: url(&quot;images/Profile_Pic.jpg&quot;); background-position: center top;"><img src="images\Profile_Pic.jpg" alt="" data-position="center center" /></a> -->
 				<div class="profile-pic">
 					<img style="border-radius: 350%; height: 350px;padding-top: 10px; padding-bottom: 10px;"
-						src="images/New_Profile.jpg" alt="Profile Picture">
+						src="images/NewProfile.png" alt="Profile Picture">
 				</div>
 
 				<div class="content">
